--- a/P2-动物交换卡/styles.css
+++ b/P2-动物交换卡/styles.css
@@ -1,38 +1,52 @@
-.animal-card {
-    border: 1px solid gray;
-    padding: 10px;
-    width: 310px;
-    -webkit-box-shadow: 10px 10px 5px 0px gray;
-    -moz-box-shadow: 10px 10px 5px 0px gray;
-    box-shadow: 10px 10px 5px 0px gray;
+* {
+    padding: 0;
+    margin: 0;
 }
 
-.animal-card>img {
+.animal-card > * {
+    margin-bottom: 15px;
+}
+
+.animal-card-content > * {
+    margin-bottom: 15px;
+}
+
+.animal-card {
+    border: 1px solid #AAAAAA;
+    padding: 20px 10px;
+    width: 310px;
+    -webkit-box-shadow: 10px 10px 5px #AAAAAA;
+    -moz-box-shadow: 10px 10px 5px #AAAAAA;
+    box-shadow: 10px 10px 5px #AAAAAA;
+}
+
+.animal-card > h3 {
+    padding: 15px 0;
+}
+
+.animal-card > img {
     width: 300px;
     height: 200px;
-    border: 1px solid gray;
+    border: 1px solid #AAAAAA;
+    margin-bottom: 15px;
 }
 
 .animal-card-content {
-    border: 1px solid gray;
-    padding: 6px;
+    border: 1px solid #AAAAAA;
+    padding: 15px 10px;
     text-align: left;
+    width: 280px;
 }
 
-.animal-card-content>p:nth-child(1) {
+.animal-card-content > p:nth-child(1) {
     font-style: italic;
 }
 
 .animal-card ul {
-    padding: 0;
-    margin: 0;
     text-align: left;
-}
-
-.animal-card-content li {
     list-style: none;
 }
 
-.animal-card-content>ul>li>span {
+.animal-card-content > ul > li > span {
     font-weight: bold;
 }
